fix e2e test field due_date is optional
