# backend_typescript_service/src/public/swagger.json
@@ -44,12 +44,12 @@
 					"created_at": {
 						"type": "string",
 						"format": "date-time",
-						"default": "2026-01-29T09:07:27.233Z"
+						"default": "2026-01-29T09:21:20.390Z"
 					},
 					"updated_at": {
 						"type": "string",
 						"format": "date-time",
-						"default": "2026-01-29T09:07:27.234Z"
+						"default": "2026-01-29T09:21:20.391Z"
 					},
 					"user": {
 						"properties": {
@@ -122,7 +122,8 @@
 						"$ref": "#/components/schemas/TodoStatus"
 					},
 					"due_date": {
-						"type": "string"
+						"type": "string",
+						"nullable": true
 					},
 					"duration": {
 						"type": "string"
@@ -143,7 +144,7 @@
 				"type": "object",
 				"description": "Construct a type with a set of properties K of type T"
 			},
-			"Partial_TodoCreateRequest_": {
+			"TodoUpdateRequest": {
 				"properties": {
 					"title": {
 						"type": "string"
@@ -155,14 +156,15 @@
 						"$ref": "#/components/schemas/TodoStatus"
 					},
 					"due_date": {
-						"type": "string"
+						"type": "string",
+						"nullable": true
 					},
 					"duration": {
 						"type": "string"
 					}
 				},
 				"type": "object",
-				"description": "Make all properties in T optional"
+				"additionalProperties": false
 			},
 			"LoginResponse": {
 				"properties": {
@@ -490,7 +492,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Partial_TodoCreateRequest_"
+								"$ref": "#/components/schemas/TodoUpdateRequest"
 							}
 						}
 					}
